# lan-torrent-server

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  LICENSE  buildconf.h.in  lan-torrent-server.ini.in  lan-torrent-server.service.in
cmake/Modules/: FindLibmicrohttpd.cmake  FindLibtorrentRasterbar.cmake  FindSystemd.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp  placeholder.cpp
src/common/: CMakeLists.txt  configuration.cpp  errorhandling.cpp  eventloop.cpp  logging.cpp  placeholder.cpp
src/common/include/: configuration.hpp  errorhandling.hpp  eventloop.hpp  logging.hpp  placeholder.hpp
src/rest-api/: CMakeLists.txt  base64.cpp  httpd.cpp
src/rest-api/include/: base64.hpp  httpd.hpp
test/: CMakeLists.txt
test/common/: CMakeLists.txt  configuration.cpp  errorhandling.cpp  logging.cpp  placeholder.cpp
test/common/inifiles/: invalid-format.ini  invalid-option.ini  valid.ini
test/rest-api/: CMakeLists.txt  base64.cpp
